// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Is checked by default 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  width: 4rem;
  height: 2rem;
  border-radius: var(--border-radius);
  background-color: var(--background-layer);
  -webkit-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
  outline: none;
  cursor: pointer;
}

.emotion-0::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 30%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: white;
  -webkit-transition: left 0.3s ease;
  transition: left 0.3s ease;
}

.emotion-0:checked {
  background-color: var(--primary);
}

.emotion-0:checked::after {
  left: 70%;
}

<input
  checked=""
  class="emotion-0 emotion-1"
  type="checkbox"
/>
`;

exports[`Is checked by when defaultChecked is true 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  width: 4rem;
  height: 2rem;
  border-radius: var(--border-radius);
  background-color: var(--background-layer);
  -webkit-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
  outline: none;
  cursor: pointer;
}

.emotion-0::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 30%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: white;
  -webkit-transition: left 0.3s ease;
  transition: left 0.3s ease;
}

.emotion-0:checked {
  background-color: var(--primary);
}

.emotion-0:checked::after {
  left: 70%;
}

<input
  checked=""
  class="emotion-0 emotion-1"
  type="checkbox"
/>
`;

exports[`Matches default checked snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  margin: 5px 0px;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  width: 4rem;
  height: 2rem;
  border-radius: var(--border-radius);
  background-color: var(--background-layer);
  -webkit-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
  outline: none;
  cursor: pointer;
}

.emotion-2::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 30%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: white;
  -webkit-transition: left 0.3s ease;
  transition: left 0.3s ease;
}

.emotion-2:checked {
  background-color: var(--primary);
}

.emotion-2:checked::after {
  left: 70%;
}

<div>
  <label
    class="emotion-0 emotion-1"
  >
    <input
      checked=""
      class="emotion-2 emotion-3"
      type="checkbox"
    />
    <span>
      MyToggleSwitch
    </span>
  </label>
</div>
`;

exports[`Matches default snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  margin: 5px 0px;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  width: 4rem;
  height: 2rem;
  border-radius: var(--border-radius);
  background-color: var(--background-layer);
  -webkit-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
  outline: none;
  cursor: pointer;
}

.emotion-2::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 30%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: white;
  -webkit-transition: left 0.3s ease;
  transition: left 0.3s ease;
}

.emotion-2:checked {
  background-color: var(--primary);
}

.emotion-2:checked::after {
  left: 70%;
}

<div>
  <label
    class="emotion-0 emotion-1"
    title="MyToggleSwitchTitle"
  >
    <input
      class="emotion-2 emotion-3"
      type="checkbox"
    />
    <span>
      MyToggleSwitch
    </span>
  </label>
</div>
`;

exports[`Matches snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  margin: 5px 0px;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  width: 4rem;
  height: 2rem;
  border-radius: var(--border-radius);
  background-color: var(--background-layer);
  -webkit-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
  outline: none;
  cursor: pointer;
}

.emotion-2::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 30%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-radius: 50%;
  height: 1.25rem;
  width: 1.25rem;
  background-color: white;
  -webkit-transition: left 0.3s ease;
  transition: left 0.3s ease;
}

.emotion-2:checked {
  background-color: var(--primary);
}

.emotion-2:checked::after {
  left: 70%;
}

<div>
  <label
    class="emotion-0 emotion-1"
    title="MyToggleSwitchTitle"
  >
    <input
      class="emotion-2 emotion-3"
      type="checkbox"
    />
    <span>
      MyToggleSwitch
    </span>
  </label>
</div>
`;
